Changes
======

0.05014 - (not yet released)
  (ms) Added support for XY type graphs
  (ms) Added Google::Chart::Title support in Google::Chart
  (ms) Added Google::Chart::Margin support

0.05013 - 30 Jan 2009
  * Explicitly require Test::More 0.82 (rt #42907)

0.05012 - 10 Jan 2009
  * Google::Chart::Data::Simple was missing a 'with()' call. 

0.05011 - 08 Dec 2008
  * Make sure to set binmode() for render_to_file(), which caused Win32
    people to not be able to read the rendered files. Reported by Ron Pero.

0.05010 - 26 Oct 2008
  * Fix tests to accomodate for stricter LWP::UserAgent
  * Don't fail tests when you don't have network connectivity
  * Make _build_ua() eplicitly private

0.05009 - 25 Oct 2008
  * Apply patch from Richard Faasen to read set env_proxy by default 

0.05008 - 09 Oct 2008
  * Fix doc/implementation mismatch rt #39889

0.05007 - 23 Sep 2008
  * No code change
  * Fix doc problem
    http://www.nntp.perl.org/group/perl.cpan.testers/2008/09/msg2267672.html

0.05006 - 16 Sep 2008
  * Fix rt #39317 by allowing parameter coercion to accept a plain
    hashref (as the synopsis says it does).

0.05005 - 10 Sep 2008
  * Switch to using auto_include_deps, which seems to fix rt #39103
  * Attempt to fix garbled UTF-8 encoding when UTF-8 encoded strings are
    passed to QRcode.pm (reported by gugod)

0.05004 - 08 Sep 2008
  * Add Grid chart (Nobuo Danjou)
  * Make it possible to work with negative values (Nobuo Danjou)
  * Support multiple markers (Nobuo Danjou)
  * Recent versions of Moose (properly) unimport blessed() and confess(), 
    which breaks my code depending on it.

0.05003 - 13 Aug 2008
  * Fix semantics for Bar chart (Nobuo Danjou)

0.05002 - 06 Aug 2008
  * Fix stupid mistake in Makefile.PL to allow a simple "y" for
    prompted question

0.05001 - 06 Aug 2008
  * Attempt to fix tests by using Test::UseAllModules (rt #38233)

0.05000 - 29 Jul 2008
  * Release new version. Please be careful as there are MANY backwards