@@ -5,6 +5,8 @@ Changes
   (ms) Added support for XY type graphs
   (ms) Added Google::Chart::Title support in Google::Chart
   (ms) Added Google::Chart::Margin support
+  (ms) Google::Chart::Fill::LinearGradient now supports transitions from
+       color1/offset1 to color2/offset2 
 
 0.05013 - 30 Jan 2009
   * Explicitly require Test::More 0.82 (rt #42907)
